--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm test
         env:
           CI: true
-    name: Deploy
+    name: deploy
     on:
       push:
         branches:
