--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
           - uses: actions/checkout@v2
           - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
             with:
-              heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+              heroku_api_key: "83cb277a7a812323e78bd1a2e6de268cd11b2106"
+              # heroku_api_key: "${{secrets.HEROKU_API_KEY}}"
               heroku_app_name: "cicd-github-heroku-hello-world" #Must be unique in Heroku
               heroku_email: "kndugan@gmail.com"
   # deploy:
